BitcoinTrader: More gui tweeks
git-svn-id: http://bitcointrader.googlecode.com/svn/Code/Privat/Android/BitcoinTrader/BitcoinTrader@19 46fdfbd1-27fd-a4d1-f970-16196c59cddc